# blackpearl

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  shape.md
static/css/: style.css
static/js/: app.js
templates/: index.html
