[project]
name = "spot"
version = "1.0.0"
description = "YouTube audio downloader with web interface"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "yt-dlp>=2025.1.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "musicbrainzngs>=0.7.1",
    "mutagen>=1.47.0",
    "requests>=2.31.0",
]

[project.scripts]
spot = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
